--- a/patterns/templates/patterns/home.html
+++ b/patterns/templates/patterns/home.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     {%  for post in posts %}
-      <h1> {{ post.title }}</h1>
-       <p> {{ post.content }}</p>
+        <h1> {{ post.title }}</h1>
+        <p> {{ post.content }}</p>
+        <p> {{ post.author }}</p>
     {% endfor %}
 {% endblock content %}
