-Moved functions from home.html to about.html within views.py -Created 400px by 400px box in home.html with center alignment -Added my-row/col/container in main.css -Modified base.html to reflect changes mentioned above

--- a/patterns/templates/patterns/about.html
+++ b/patterns/templates/patterns/about.html
@@ -1,5 +1,10 @@
 {% extends "patterns/base.html" %}
 
 {% block content %}
+    {%  for post in posts %}
+        <h1> {{ post.title }}</h1>
+        <p> {{ post.content }}</p>
+        <p> {{ post.author }}</p>
+    {% endfor %}
     <h1> Pattern About!</h1>
 {% endblock content %}
