--- a/patterns/templates/patterns/home.html
+++ b/patterns/templates/patterns/home.html
@@ -1,9 +1,5 @@
 {% extends "patterns/base.html" %}
 
 {% block content %}
-    {%  for post in posts %}
-        <h1> {{ post.title }}</h1>
-        <p> {{ post.content }}</p>
-        <p> {{ post.author }}</p>
-    {% endfor %}
+        Where the random text/bubble objects will be stored.
 {% endblock content %}
