--- a/patterns/templates/patterns/base.html
+++ b/patterns/templates/patterns/base.html
@@ -40,30 +40,17 @@
                 </div>
             </nav>
         </header>
-       <main role="main" class="container">
-              <div class="row">
-                    <div class="col-md-8">
-                        {% block content %}{% endblock %}
-                    </div>
-                    <div class="col-md-4">
-                      <div class="content-section">
-                        <h3>Our Sidebar</h3>
-                            <p class='text-muted'>You can put any information here you'd like.
-                             <ul class="list-group">
-                                <li class="list-group-item list-group-item-light">Temp 1</li>
-                                <li class="list-group-item list-group-item-light">Temp 2</li>
-                                <li class="list-group-item list-group-item-light">Temp 3</li>
-                                <li class="list-group-item list-group-item-light">etc</li>
-                             </ul>
-                            </p>
-                      </div>
-                    </div>
+        <main role="main" class="container-fluid my-container">
+              <div class="row my-row justify-content-center">
+                  <div class="col-auto my-col text-center">
+                      {% block content %}{% endblock %}
+                  </div>
               </div>
         </main>
         <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
