updated pygal and button interaction

--- a/patterns/templates/patterns/about.html
+++ b/patterns/templates/patterns/about.html
@@ -7,4 +7,7 @@
         <p> {{ post.author }}</p>
     {% endfor %}
     <h1> Pattern About!</h1>
+    <form method='get' action='#'>
+        <input type="submit" value="Button" name="Button"/>
+    </form>
 {% endblock content %}
