Switched around home and about page. Added to home.html Modified the alignment within base.html for block content

--- a/patterns/templates/patterns/base.html
+++ b/patterns/templates/patterns/base.html
@@ -42,8 +42,8 @@
         </header>
         <main role="main" class="container-fluid my-container">
               <div class="row my-row justify-content-center">
-                  <div class="col-auto my-col text-center">
-                      {% block content %}{% endblock %}
+                  <div class="col-auto my-col justify-content-center">
+                      {% block content %}   {% endblock %}
                   </div>
               </div>
         </main>
