--- a/patterns/static/patterns/main.css
+++ b/patterns/static/patterns/main.css
@@ -88,11 +88,16 @@ a.article-title:hover {
   height: 400px;
   width: 400px;
 }
+.my-col-2{
+  border:3px solid darkred;
+  height: 20px;
+  width: 20px;
+}
 
 .my-row{
   border: 3px solid green;
 }
 
 my-container{
-  border: 3px solid red;
+  border: 3px solid yellow;
 }
