--- a/patterns/templates/patterns/home.html
+++ b/patterns/templates/patterns/home.html
@@ -1,5 +1,13 @@
 {% extends "patterns/base.html" %}
 
 {% block content %}
-        Where the random text/bubble objects will be stored.
+    <div class="row my-col-2 justify-content-center">
+        11
+    </div>
+    <div class="col my-col-2 align-items-center">
+        27
+    </div>
+    <div class="row my-col-2 justify-content-center">
+        42
+    </div>
 {% endblock content %}
