--- a/patterns/templates/patterns/bubbleChart9.html
+++ b/patterns/templates/patterns/bubbleChart9.html
@@ -92,5 +92,12 @@
           d.fx = null;
           d.fy = null;
         }
+
+        svg.on('click', click);
+        function click(d){
+            var date = new Date();
+            var time = date.getMilliseconds();
+            d3.select('body').append('p').text('Ow, that hurt! \n It took you: '+time+'  milliseconds');
+        }
     </script>
 {% endblock content %}
