Cleaned up code and added functionality to nav bar.

--- a/hello/templates/hello/hello_there.html
+++ b/hello/templates/hello/hello_there.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
+{% extends "patterns/base.html" %}
+{% block content %}
+    <body>
         <title>
             Hello, Django
         </title>
-        {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
-    </head>
-    <body>
         <span class="message">Hello, there {{ name }}!</span> It's {{ date | date:'l, d F, Y' }} at {{ date | time:'H:i:s' }}.
     </body>
-</html>
+{% endblock content %}
