--- a/patterns/static/patterns/main.css
+++ b/patterns/static/patterns/main.css
@@ -97,7 +97,11 @@ a.article-title:hover {
 .my-row{
   border: 3px solid green;
 }
-
+my-border{
+  border: 2px solid black;
+  height: 400px;
+  width: 400px;
+}
 my-container{
   border: 3px solid yellow;
 }
