--- a/patterns/templates/patterns/base.html
+++ b/patterns/templates/patterns/base.html
@@ -22,19 +22,22 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-              <a class="navbar-brand mr-4" href="/">Reaction time</a>
+              <a class="navbar-brand mr-4" href="{% url 'patterns-home'%}">Reaction time</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
-                  <a class="nav-item nav-link" href="{% url 'patterns-home' %}">Home</a>
-                  <a class="nav-item nav-link" href="{% url 'patterns-about' %}">About</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-home' %}">Home</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-about' %}">About</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-bubbleChart9' %}">Bubble9</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-bubble25' %}">bubble25</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-pygalexample' %}">pygal</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                  <a class="nav-item nav-link" href="#">Login</a>
-                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                    <a class="nav-item nav-link" href="#">Login</a>
+                    <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                 </div>
               </div>
             </div>
