--- a/patterns/templates/patterns/pygalexample.html
+++ b/patterns/templates/patterns/pygalexample.html
@@ -1,96 +1,98 @@
-<!DOCTYPE html>
+{% extends "patterns/base.html" %}
+
+{% block content %}
 <meta charset="utf-8">
 <body>
-<h1>Here is a movable bubble graph</h1>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<div id="my_dataviz"></div>
-<script>
-// set the dimensions and margins of the graph
-var width = 600
-var height = 600
+    <h1>Here is a movable bubble graph</h1>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <div id="my_dataviz" class="my-border"></div>
+    <script>
+        // set the dimensions and margins of the graph
+        var width = 600
+        var height = 600
 
-// append the svg object to the body of the page
-var svg = d3.select("#my_dataviz")
-  .append("svg")
-    .attr("width", 600)
-    .attr("height", 600)
+        // append the svg object to the body of the page
+        var svg = d3.select("#my_dataviz")
+          .append("svg")
+            .attr("width", 600)
+            .attr("height", 600)
 
-// create dummy data -> just one element per circle
-var data = [{ "name": "A", "group": 1 }, { "name": "B", "group": 2 }, { "name": "C", "group": 3 }/*, { "name": "D", "group": 1 }, { "name": "E", "group": 1 }, { "name": "F", "group": 1 },
-            { "name": "G", "group": 2 }, { "name": "H", "group": 2 }, { "name": "I", "group": 2 }, { "name": "J", "group": 2 }, { "name": "K", "group": 2 }, { "name": "L", "group": 2 },
-{ "name": "M", "group": 3 }, { "name": "N", "group": 3 }, { "name": "O", "group": 3 }*/]
+        // create dummy data -> just one element per circle
+        var data = [{ "name": "A", "group": 1 },/* { "name": "B", "group": 2 }, { "name": "C", "group": 3 }, { "name": "D", "group": 1 }, { "name": "E", "group": 1 }, { "name": "F", "group": 1 },
+                    { "name": "G", "group": 2 }, { "name": "H", "group": 2 }, { "name": "I", "group": 2 }, { "name": "J", "group": 2 }, { "name": "K", "group": 2 }, { "name": "L", "group": 2 },
+        { "name": "M", "group": 3 }, { "name": "N", "group": 3 }, { "name": "O", "group": 3 }*/]
 
-// A scale that gives a X target position for each group
-var x = d3.scaleOrdinal()
-  .domain([1, 2, 3])
-  .range([50, 200, 340])
+        // A scale that gives a X target position for each group
+        var x = d3.scaleOrdinal()
+          .domain([1, 2, 3])
+          .range([50, 200, 340])
 
-// A scale that gives a Y target position for each group
-var y = d3.scaleOrdinal()
-  .domain([1, 2, 3])
-  .range([50, 200, 340])
+        // A scale that gives a Y target position for each group
+        var y = d3.scaleOrdinal()
+          .domain([1, 2, 3])
+          .range([50, 200, 340])
 
-// A scale that gives a radius for each group
-var size = d3.scaleOrdinal()
-  .domain([1,2,3])
-  .range([35, 30 , 20])
+        // A scale that gives a radius for each group
+        var size = d3.scaleOrdinal()
+          .domain([1,2,3])
+          .range([35, 30 , 20])
 
-// A color scale
-var color = d3.scaleOrdinal()
-  .domain([1, 2, 3])
-  .range([ "#F8766D", "#00BA38", "#619CFF"])
+        // A color scale
+        var color = d3.scaleOrdinal()
+          .domain([1, 2, 3])
+          .range([ "#F8766D", "#00BA38", "#619CFF"])
 
-// Initialize the circle: all located at the center of the svg area
-var node = svg.append("g")
-  .selectAll("circle")
-  .data(data)
-  .enter()
-  .append("circle")
-    .attr("r", function(d){ return size(d.group)})
-    .attr("cx", width / 2)
-    .attr("cy", height / 2)
-    .style("fill", function(d){ return color(d.group)})
-    .style("fill-opacity", 0.8)
-    .attr("stroke", "black")
-    .style("stroke-width", 4)
-    .call(d3.drag() // call specific function when circle is dragged
-         .on("start", dragstarted)
-         .on("drag", dragged)
-         .on("end", dragended));
+        // Initialize the circle: all located at the center of the svg area
+        var node = svg.append("g")
+          .selectAll("circle")
+          .data(data)
+          .enter()
+          .append("circle")
+            .attr("r", function(d){ return size(d.group)})
+            .attr("cx", width / 2)
+            .attr("cy", height / 2)
+            .style("fill", function(d){ return color(d.group)})
+            .style("fill-opacity", 0.8)
+            .attr("stroke", "black")
+            .style("stroke-width", 4)
+            .call(d3.drag() // call specific function when circle is dragged
+                 .on("start", dragstarted)
+                 .on("drag", dragged)
+                 .on("end", dragended));
 
-// Features of the forces applied to the nodes:
-var simulation = d3.forceSimulation()
-    .force("x", d3.forceX().strength(0.5).x( function(d){ return x(d.group) } ))
-    .force("y", d3.forceY().strength(0.1).y(function(d){ return y(d.group) } ))
-    .force("center", d3.forceCenter().x(width / 2).y(height / 2)) // Attraction to the center of the svg area
-    .force("charge", d3.forceManyBody().strength(1)) // Nodes are attracted one each other of value is > 0
-    .force("collide", d3.forceCollide().strength(.1).radius(32).iterations(1)) // Force that avoids circle overlapping
+        // Features of the forces applied to the nodes:
+        var simulation = d3.forceSimulation()
+            .force("x", d3.forceX().strength(0.5).x( function(d){ return x(d.group) } ))
+            .force("y", d3.forceY().strength(0.1).y(function(d){ return y(d.group) } ))
+            .force("center", d3.forceCenter().x(width / 2).y(height / 2)) // Attraction to the center of the svg area
+            .force("charge", d3.forceManyBody().strength(1)) // Nodes are attracted one each other of value is > 0
+            .force("collide", d3.forceCollide().strength(.1).radius(32).iterations(1)) // Force that avoids circle overlapping
 
-// Apply these forces to the nodes and update their positions.
-// Once the force algorithm is happy with positions ('alpha' value is low enough), simulations will stop.
-simulation
-    .nodes(data)
-    .on("tick", function(d){
-      node
-          .attr("cx", function(d){ return d.x; })
-          .attr("cy", function(d){ return d.y; })
-    });
+        // Apply these forces to the nodes and update their positions.
+        // Once the force algorithm is happy with positions ('alpha' value is low enough), simulations will stop.
+        simulation
+            .nodes(data)
+            .on("tick", function(d){
+              node
+                  .attr("cx", function(d){ return d.x; })
+                  .attr("cy", function(d){ return d.y; })
+            });
 
-// What happens when a circle is dragged?
-function dragstarted(d) {
-  if (!d3.event.active) simulation.alphaTarget(.03).restart();
-  d.fx = d.x;
-  d.fy = d.y;
-}
-function dragged(d) {
-  d.fx = d3.event.x;
-  d.fy = d3.event.y;
-}
-function dragended(d) {
-  if (!d3.event.active) simulation.alphaTarget(.03);
-  d.fx = null;
-  d.fy = null;
-}
-</script>
+        // What happens when a circle is dragged?
+        function dragstarted(d) {
+          if (!d3.event.active) simulation.alphaTarget(.03).restart();
+          d.fx = d.x;
+          d.fy = d.y;
+        }
+        function dragged(d) {
+          d.fx = d3.event.x;
+          d.fy = d3.event.y;
+        }
+        function dragended(d) {
+          if (!d3.event.active) simulation.alphaTarget(.03);
+          d.fx = null;
+          d.fy = null;
+        }
+        </script>
 </body>
-</html>
+{% endblock content %}
