--- a/patterns/templates/patterns/base.html
+++ b/patterns/templates/patterns/base.html
@@ -31,6 +31,7 @@
                     <a class="nav-item nav-link" href="{% url 'patterns-home' %}">Home</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-about' %}">About</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-bubbleChart9' %}">Bubble9</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-bubble5' %}">Bubble5</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-bubble25' %}">bubble25</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-pygalexample' %}">pygal</a>
                 </div>
