--- a/patterns/templates/patterns/bubble25.html
+++ b/patterns/templates/patterns/bubble25.html
@@ -7,7 +7,14 @@
     // set the dimensions and margins of the graph
     var width = 600
     var height = 600
-
+    const arr = [];
+        const n = 25;
+        do{
+          const randomNumber= Math.floor(Math.random() * Math.floor(100));
+          if( !arr.includes(randomNumber)){
+            arr.push(randomNumber);
+          }
+        } while(arr.length < n);
     // append the svg object to the body of the page
     var svg = d3.select("#my_dataviz")
       .append("svg")
@@ -54,11 +61,11 @@
        11, 12 ,13, 14 ,15,
        16 ,17, 18, 19, 20,
        21, 22, 23 ,24 ,25])
-      .range([25, 40 , 20, 35, 30 ,
-      25, 50 , 20, 35, 30 ,
-      25, 50 , 20, 35, 30 ,
-      25, 50 , 20, 35, 30 ,
-      25, 50 , 20, 35, 30 ])
+      .range([arr[0],arr[1], arr[2], arr[3],arr[4],
+      arr[5],arr[6], arr[7], arr[8],arr[9] ,
+      arr[10],arr[11], arr[12], arr[13],arr[14] ,
+      arr[15],arr[16], arr[17], arr[18],arr[19],
+      arr[20],arr[21], arr[22], arr[23],arr[24] ])
 
     // A color scale
     var color = d3.scaleOrdinal()
