--- a/patterns/templates/patterns/bubbleChart9.html
+++ b/patterns/templates/patterns/bubbleChart9.html
@@ -9,7 +9,14 @@
         // set the dimensions and margins of the graph
         var width = 600
         var height = 600
-
+        const arr = [];
+        const n = 9;
+        do{
+          const randomNumber= Math.floor(Math.random() * Math.floor(100));
+          if( !arr.includes(randomNumber)){
+            arr.push(randomNumber);
+          }
+        } while(arr.length < n);
         // append the svg object to the body of the page
         var svg = d3.select("#my_dataviz")
           .append("svg")
@@ -34,7 +41,7 @@
         // A scale that gives a radius for each group
         var size = d3.scaleOrdinal()
           .domain([1, 2, 3, 4, 5, 6, 7, 8, 9])
-          .range([35, 30 , 20, 35, 30 , 20 , 99, 99 , 99])
+          .range([arr[0],arr[1], arr[2], arr[3],arr[4], arr[5], arr[6],arr[7], arr[8]])
 
         // A color scale
         var color = d3.scaleOrdinal()
