--- a/patterns/templates/patterns/pygalexample.html
+++ b/patterns/templates/patterns/pygalexample.html
@@ -100,6 +100,12 @@
           d.fx = null;
           d.fy = null;
         }
+        svg.on('click', click);
+        function click(d){
+            var date = new Date();
+            var time = date.getMilliseconds();
+            d3.select('body').append('p').text('Ow, that hurt! \n It took you: '+time+'  milliseconds');
+        }
         </script>
 </body>
 {% endblock content %}
