--- a/patterns/templates/patterns/pygalexample.html
+++ b/patterns/templates/patterns/pygalexample.html
@@ -105,6 +105,14 @@
             var date = new Date();
             var time = date.getMilliseconds();
             d3.select('body').append('p').text('Ow, that hurt! \n It took you: '+time+'  milliseconds');
+
+            $.ajax({
+                url: "{% url 'patterns-pygalexample' %}",
+                data: JSON.stringify({'time':time}),
+                type: 'POST'
+            }).done(function(responce){
+                alert(responce);
+            });
         }
         </script>
 </body>
