--- a/patterns/templates/patterns/base.html
+++ b/patterns/templates/patterns/base.html
@@ -29,7 +29,7 @@
               <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{% url 'patterns-home' %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url 'patterns-about' %}">About</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-about' %}">Trials</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-pygalexample' %}">Bubble3</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-bubble5' %}">Bubble5</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-bubbleChart9' %}">Bubble9</a>
