--- a/patterns/static/patterns/main.css
+++ b/patterns/static/patterns/main.css
@@ -18,14 +18,17 @@ ul {
 
 .site-header .navbar-nav .nav-link {
   color: #cbd5db;
+
 }
 
 .site-header .navbar-nav .nav-link:hover {
   color: #ffffff;
+
 }
 
 .site-header .navbar-nav .nav-link.active {
   font-weight: 500;
+
 }
 
 .content-section {
@@ -104,4 +107,61 @@ my-border{
 }
 my-container{
   border: 3px solid yellow;
+}
+.my-navbar {
+  overflow: hidden;
+  background-color: #333;
+  font-family: Arial;
+}
+.my-navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.my-dropdown {
+  float: left;
+  overflow: hidden !important;
+}
+
+.my-dropdown .my-dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+.my-navbar a:hover, .my-dropdown:hover .my-dropbtn {
+  background-color: red;
+}
+.my-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.my-dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.my-dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.my-dropdown:hover .my-dropdown-content {
+  display: block;
 }
