-Applied fix to bubble 3,5,9,25. -Need to solve to user answer.

--- a/patterns/templates/patterns/bubble5.html
+++ b/patterns/templates/patterns/bubble5.html
@@ -168,11 +168,20 @@
             clicked = clicked + 1;
             d3.select('body').append('p').text('Button was clicked: '+clicked);
 
+            var temp;
+            var largest = 0;
+            for(var i=0; i<arr.length; i++){
+                temp = arr[i];
+                if(temp > largest)
+                    largest = temp;
+            }
             fetch("{% url 'patterns-bubble5' %}", {
                     method: 'post',
                     body: JSON.stringify({
                         'time': Math.abs(msdiff),
-                        'repetition':clicked
+                        'repetition':clicked,
+                        'values':arr,
+                        'correctanswer':largest
                     }),
                     headers: {'X-CSRFToken':document.cookie.split('=')[1]}
             }).then((response)=>{console.log(document.cookie.split('=')[1])})
