--- a/patterns/templates/patterns/about.html
+++ b/patterns/templates/patterns/about.html
@@ -3,7 +3,10 @@
 {% block content %}
     {%  for post in posts %}
         <h1> {{ post.participantID }}</h1>
-        <p> Repetition n-{{ post.repetition }}</p>
+        <p> Representation is: {{ post.representation }}</p>
+        <p> Repetition: n-{{ post.repetition }}</p>
         <p> Time to click: {{ post.time }} ms.</p>
+        <p> List of Values: {{ post.values }}</p>
+        <p> largest Value is: {{ post.correctanswer }}</p>
     {% endfor %}
 {% endblock content %}
