-Cleaned up home page -Changed value for if case within html. -configured CORS within settings.

--- a/patterns/templates/patterns/base.html
+++ b/patterns/templates/patterns/base.html
@@ -29,10 +29,7 @@
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{% url 'patterns-home' %}">Home</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-about' %}">Trials</a>
-                    <a class="nav-item nav-link" href="{% url 'patterns-pygalexample' %}">Bubble3</a>
-                    <a class="nav-item nav-link" href="{% url 'patterns-bubble5' %}">Bubble5</a>
-                    <a class="nav-item nav-link" href="{% url 'patterns-bubbleChart9' %}">Bubble9</a>
-                    <a class="nav-item nav-link" href="{% url 'patterns-bubble25' %}">bubble25</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-pygalexample' %}">Bubble</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
