--- a/patterns/templates/patterns/bubble25.html
+++ b/patterns/templates/patterns/bubble25.html
@@ -6,10 +6,10 @@
     <div id="my_dataviz">   </div>
 
     <div class="instructions">
-        <p>Please click on 'Next' to get started. REMEMBER TO SAVE!</p>
+        <p>Please click on 'Next' to get started!</p>
     </div>
 
-    <button type="button" onClick="save()">Save</button>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -31,7 +31,7 @@
         const n = 25;
 
         function next(){
-            if(clicked < 3) {
+            if(clicked < 25) {
                 startdate = new Date();
                 starttimer = startdate.getTime();
 
