--- a/patterns/templates/patterns/bubbleChart9.html
+++ b/patterns/templates/patterns/bubbleChart9.html
@@ -7,10 +7,9 @@
 
     <div id="my_dataviz"></div>
     <div class="instructions">
-        <p>Please click on 'Next' to get started. REMEMBER TO SAVE!</p>
+        <p>Please click on 'Next' to get started!</p>
     </div>
 
-    <button type="button" onClick="save()">Save</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -32,7 +31,7 @@
         const n = 9;
 
         function next() {
-            if (clicked < 3) {
+            if (clicked < 9) {
                 startdate = new Date();
                 starttimer = startdate.getTime();
 
