--- a/patterns/templates/patterns/pygalexample.html
+++ b/patterns/templates/patterns/pygalexample.html
@@ -10,10 +10,8 @@
     <div id="my_dataviz" class="my-border"></div>
 
     <div class="instructions">
-        <p>Please click on 'Next' to get started. REMEMBER TO SAVE!</p>
+        <p>Please click on 'Next' to get started!</p>
     </div>
-
-    <button type="button" onClick="save()">Save</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -210,5 +208,3 @@
 </body>
 {% endblock content %}
 
- //'Access-Control-Allow-Origin':{% url 'patterns-bubble5' %},
- //'Access-Control-Allow-Credentials': true
