Fixed eventListener to return the right data onclick

--- a/patterns/templates/patterns/about.html
+++ b/patterns/templates/patterns/about.html
@@ -8,5 +8,6 @@
         <p> Time to click: {{ post.time }} ms.</p>
         <p> List of Values: {{ post.values }}</p>
         <p> largest Value is: {{ post.correctanswer }}</p>
+        <p> Answer is : {{ post.answer }}</p>
     {% endfor %}
 {% endblock content %}
