--- a/patterns/templates/patterns/pygalexample.html
+++ b/patterns/templates/patterns/pygalexample.html
@@ -100,9 +100,13 @@
                     .attr("stroke", "black")
                     .style("stroke-width", 4)
 
-                let csvgA = document.querySelector("#A");
-                let csvgB = document.querySelector("#B");
-                let csvgC = document.querySelector("#C");
+                //const elements = document.querySelectorAll("circle");
+                //elements.forEach(function(el) {
+                //   el.addEventListener("click", click);
+                //});
+                const csvgA = document.getElementById('A');
+                const csvgB = document.getElementById('B');
+                const csvgC = document.getElementById('C');
                 csvgA.addEventListener('click',click);
                 csvgB.addEventListener('click',click);
                 csvgC.addEventListener('click',click);
@@ -110,13 +114,8 @@
                 function click(d) {
                     var largest = 0;
                     console.log(arr);
-                    for(var i=0; i<arr.length; i++){
-                        temp = arr[i];
-                        if(temp > largest)
-                            largest = temp;
-                        console.log('Circle that was picked is: '+color(d.target.id));
-                    }
-                    answer = size(d.target.id);
+                    console.log(d.target);
+                    answer = d.target.getAttribute("r");
                     console.log('Circle that was picked is: '+answer);
 
                     enddate = new Date();
@@ -146,7 +145,8 @@
                             'time': Math.abs(msdiff),
                             'repetition':clicked,
                             'values':arr,
-                            'correctanswer':largest
+                            'correctanswer':largest,
+                            'answer':answer
                         }),
                         headers: {
                             'X-CSRFToken':document.cookie.split('=')[1]
