started on text pages

--- a/patterns/templates/patterns/base.html
+++ b/patterns/templates/patterns/base.html
@@ -30,6 +30,7 @@
                     <a class="nav-item nav-link" href="{% url 'patterns-home' %}">Home</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-about' %}">Trials</a>
                     <a class="nav-item nav-link" href="{% url 'patterns-pygalexample' %}">Bubble</a>
+                    <a class="nav-item nav-link" href="{% url 'patterns-text3' %}">Text</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
