--- a/patterns/templates/patterns/text3.html
+++ b/patterns/templates/patterns/text3.html
@@ -1,37 +1,40 @@
 {% extends "patterns/base.html" %}
+
 {% block content %}
-    <meta charset="utf-8">
-    <body>
-    <h1>Here is a movable 9 pt bubble graph</h1>
+<meta charset="utf-8">
+<body>
+    <h1>Here is a movable text graph</h1>
     <button type="button" onClick="next()">Next</button>
 
-    <div id="my_dataviz"></div>
+
+    <div id="my_dataviz" class="my-border"></div>
+
     <div class="instructions">
         <p>Please click on 'Next' to get started!</p>
     </div>
 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
-        //Timer var
+
         var startdate = new Date();
         var starttimer = startdate.getTime();
         var clicked = 0;
         var enddate;
         var endtimer;
         var difftime;
-        var msdiff ;
-
-        var sec
+        var msdiff;
+        var sec;
+        var answer;
         // set the dimensions and margins of the graph
         var width = 600
         var height = 600
         var arr = [];
-        const n = 9;
+        const n = 3;
 
-        function next() {
-            if (clicked < 4) {
+        function next(){
+            if(clicked < 4) {
+                console.log("Clicked before adding is: "+clicked+"--made it in the first if--");
                 startdate = new Date();
                 starttimer = startdate.getTime();
 
@@ -50,34 +53,30 @@
                     .attr("height", 600)
 
                 // create dummy data -> just one element per circle
-                var data = [{"name": "A", "group": 1}, {"name": "B", "group": 2}, {
-                    "name": "C",
-                    "group": 3
-                }, {"name": "D", "group": 4}, {"name": "E", "group": 5}, {"name": "F", "group": 6},
-                    {"name": "G", "group": 7}, {"name": "H", "group": 8}, {"name": "I", "group": 9}/*, { "name": "J", "group": 2 }, { "name": "K", "group": 2 }, { "name": "L", "group": 2 },
-                { "name": "M", "group": 3 }, { "name": "N", "group": 3 }, { "name": "O", "group": 3 }*/]
+                var data = [{"name": "A", "group": 1}, {"name": "B", "group": 2}, {"name": "C", "group": 3}]
 
                 // A scale that gives a X target position for each group
                 var x = d3.scaleOrdinal()
-                    .domain([1, 2, 3, 4, 5, 6, 7, 8, 9])
-                    .range([100, 100, 100, 300, 300, 300, 500, 500, 500])
+                    .domain([1, 2, 3])
+                    .range([300, 200, 400])
 
                 // A scale that gives a Y target position for each group
                 var y = d3.scaleOrdinal()
-                    .domain([1, 2, 3, 4, 5, 6, 7, 8, 9])
-                    .range([100, 300, 500, 100, 300, 500, 100, 300, 500])
+                    .domain([1, 2, 3])
+                    .range([200, 400, 400])
 
                 // A scale that gives a radius for each group
                 var size = d3.scaleOrdinal()
-                    .domain([1, 2, 3, 4, 5, 6, 7, 8, 9])
-                    .range([arr[0], arr[1], arr[2], arr[3], arr[4], arr[5], arr[6], arr[7], arr[8]])
+                    .domain([1, 2, 3])
+                    .range([arr[0], arr[1], arr[2]])
 
                 // A color scale
                 var color = d3.scaleOrdinal()
-                    .domain([1, 2, 3, 4, 5, 6, 7, 8, 9])
-                    .range(["#F8766D", "#00BA38", "#619CFF", "#F8766D", "#00BA38", "#619CFF", "#F8766D", "#00BA38", "#619CFF"])
+                    .domain([1, 2, 3])
+                    .range(["#F8766D", "#00BA38", "#619CFF"])
 
                 // Initialize the circle: all located at the center of the svg area
+                console.log(data)
                 var node = svg.append("g")
                     .selectAll("circle")
                     .data(data)
@@ -100,33 +99,25 @@
                     })
                     .style("fill-opacity", 0.8)
                     .attr("stroke", "black")
-                    .style("stroke-width", 4);
+                    .style("stroke-width", 4)
 
-                let csvgA = document.querySelector("#A");
-                let csvgB = document.querySelector("#B");
-                let csvgC = document.querySelector("#C");
-                let csvgD = document.querySelector("#D");
-                let csvgE = document.querySelector("#E");
-                let csvgF = document.querySelector("#F");
-                let csvgG = document.querySelector("#G");
-                let csvgH = document.querySelector("#H");
-                let csvgI = document.querySelector("#I");
+                //const elements = document.querySelectorAll("circle");
+                //elements.forEach(function(el) {
+                //   el.addEventListener("click", click);
+                //});
+                const csvgA = document.getElementById('A');
+                const csvgB = document.getElementById('B');
+                const csvgC = document.getElementById('C');
                 csvgA.addEventListener('click',click);
                 csvgB.addEventListener('click',click);
                 csvgC.addEventListener('click',click);
-                csvgD.addEventListener('click',click);
-                csvgE.addEventListener('click',click);
-                csvgF.addEventListener('click',click);
-                csvgG.addEventListener('click',click);
-                csvgH.addEventListener('click',click);
-                csvgI.addEventListener('click',click);
 
                 function click(d) {
                     var largest = 0;
                     console.log(arr);
+                    console.log(d.target);
                     answer = d.target.getAttribute("r");
                     console.log('Circle that was picked is: '+answer);
-                    //console.log('Circle that was picked is: '+answer);
 
                     enddate = new Date();
                     endtimer = enddate.getTime();
@@ -137,9 +128,10 @@
                     sec = Math.floor((difftime % (1000 * 60)) / 1000);
 
                     d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
-
                     clicked = clicked + 1;
+                    console.log("Clicked after adding is: "+clicked);
                     d3.select('body').append('p').text('Button was clicked: '+clicked);
+
 
                     var temp;
                     var largest = 0;
@@ -149,7 +141,7 @@
                             largest = temp;
                     }
 
-                    fetch("{% url 'patterns-bubbleChart9' %}", {
+                    fetch("{% url 'patterns-text3' %}", {
                         method: 'post',
                         body: JSON.stringify({
                             'time': Math.abs(msdiff),
@@ -158,15 +150,20 @@
                             'correctanswer':largest,
                             'answer':answer
                         }),
-                        headers: {'X-CSRFToken':document.cookie.split('=')[1]}
+                        headers: {
+                            'X-CSRFToken':document.cookie.split('=')[1]
+                        }
                     }).then((response)=>{console.log(document.cookie.split('=')[1])})
-                next();
+                    console.log("Clicked before adding is: "+clicked+"--made it in the second if, within the first if--");
+                    next();
                 }
             }else{
-                window.location.replace("{% url 'patterns-bubble25' %}");
-                //d3.select("svg").remove();
-                //d3.select('body').append('h1').text('You have finished your 3 trials. Please move on.');
+               moveon();
             }
         }
-    </script>
+        function moveon(){
+            window.location.href = "{% url 'patterns-text5' %}";
+        }
+        </script>
+</body>
 {% endblock content %}
