--- a/patterns/templates/patterns/bubbleChart9.html
+++ b/patterns/templates/patterns/bubbleChart9.html
@@ -75,7 +75,7 @@
                 // A color scale
                 var color = d3.scaleOrdinal()
                     .domain([1, 2, 3, 4, 5, 6, 7, 8, 9])
-                    .range(["#F8766D", "#00BA38", "#619CFF", "#F8766D", "#00BA38", "#619CFF", "#F8766D", "#00BA38", "#619CFF"])
+                    .range(["#000000", "#000000", "#000000", "#000000", "#000000","#000000", "#000000", "#000000", "#000000"])
 
                 // Initialize the circle: all located at the center of the svg area
                 var node = svg.append("g")
@@ -98,9 +98,6 @@
                     .style("fill", function (d) {
                         return color(d.group)
                     })
-                    .style("fill-opacity", 0.8)
-                    .attr("stroke", "black")
-                    .style("stroke-width", 4);
 
                 let csvgA = document.querySelector("#A");
                 let csvgB = document.querySelector("#B");
