--- a/patterns/templates/patterns/text25.html
+++ b/patterns/templates/patterns/text25.html
@@ -109,11 +109,11 @@
                         11, 12, 13, 14, 15,
                         16, 17, 18, 19, 20,
                         21, 22, 23, 24, 25])
-                    .range(["#F8766D", "#00BA38", "#619CFF", "#F8766D", "#00BA38",
-                        "#619CFF", "#F8766D", "#00BA38", "#619CFF", "#F8766D",
-                        "#00BA38", "#619CFF", "#F8766D", "#00BA38", "#619CFF",
-                        "#F8766D", "#00BA38", "#619CFF", "#F8766D", "#00BA38",
-                        "#619CFF", "#F8766D", "#00BA38", "#619CFF", "#F8766D"])
+                    .range(["#000000", "#000000", "#000000", "#000000", "#000000",
+                        "#000000", "#000000", "#000000", "#000000", "#000000",
+                        "#000000", "#000000", "#000000", "#000000", "#000000",
+                        "#000000", "#000000", "#000000", "#000000", "#000000",
+                        "#000000", "#000000", "#000000", "#000000", "#000000"])
 
                 // Initialize the circle: all located at the center of the svg area
                 var node = svg.append("g")
@@ -137,6 +137,7 @@
                         return color(d.group)
                     })
                     .attr("stroke", "black")
+                    .attr("font-size", "2em")
 
                 let csvgA = document.querySelector("#A");
                 let csvgB = document.querySelector("#B");
