made the circles colourful

--- a/patterns/templates/patterns/bubble25.html
+++ b/patterns/templates/patterns/bubble25.html
@@ -109,11 +109,11 @@
                         11, 12, 13, 14, 15,
                         16, 17, 18, 19, 20,
                         21, 22, 23, 24, 25])
-                    .range(["#000000", "#000000", "#000000", "#000000", "#000000",
-                        "#000000", "#000000", "#000000", "#000000", "#000000",
-                        "#000000", "#000000", "#000000", "#000000", "#000000",
-                        "#000000", "#000000", "#000000", "#000000", "#000000",
-                        "#000000", "#000000", "#000000", "#000000", "#000000"])
+                    .range(["#1ebe76", "#ea8766", "#c35df7", "#dd2de1", "#b65336",
+                        "#d20e55", "#cb4f75", "#6383c9", "#290891", "#cf5f61",
+                        "#717e35", "#290891", "#d20e55", "#ef30fb", "#6383c9",
+                        "#ce3615", "#6117bc", "#379b6b", "#9e6688", "#000000",
+                        "#9b7da6", "#9e6688", "#505b9c", "#fa0ef8", "#ce3615"])
 
                 // Initialize the circle: all located at the center of the svg area
                 var node = svg.append("g")
@@ -136,6 +136,7 @@
                     .style("fill", function (d) {
                         return color(d.group)
                     })
+                    .style("fill-opacity", 0.8)
 
                 let csvgA = document.querySelector("#A");
                 let csvgB = document.querySelector("#B");
