--- a/patterns/templates/patterns/text25.html
+++ b/patterns/templates/patterns/text25.html
@@ -31,7 +31,7 @@
         const n = 25;
 
         function next(){
-            if(clicked < 4) {
+            if(clicked < 10) {
                 startdate = new Date();
                 starttimer = startdate.getTime();
 
@@ -123,9 +123,13 @@
                     .attr("id" ,function (d){
                         return d.name
                     })
+                    
                     .text( function (d) {
                         return size(d.group)
                     })
+                    .attr("values",function (d) {
+                        return size(d.group)
+                    } )
                     .attr("x", function (d) {
                         return x(d.group)
                     })
@@ -192,7 +196,7 @@
                 function click(d) {
                     var largest = 0;
                     console.log(arr);
-                    answer = d.target.getAttribute("r");
+                    answer = d.target.getAttribute("values");
                     console.log('Circle that was picked is: '+answer);
 
                     enddate = new Date();
