--- a/patterns/templates/patterns/text9.html
+++ b/patterns/templates/patterns/text9.html
@@ -31,7 +31,7 @@
         const n = 9;
 
         function next() {
-            if (clicked < 4) {
+            if (clicked < 10) {
                 startdate = new Date();
                 starttimer = startdate.getTime();
 
@@ -93,6 +93,9 @@
                     .attr("x", function (d) {
                         return x(d.group)
                     })
+                    .attr("values",function (d) {
+                        return size(d.group)
+                    } )
                     .attr("y", function (d) {
                         return y(d.group)
                     })
@@ -124,7 +127,7 @@
                 function click(d) {
                     var largest = 0;
                     console.log(arr);
-                    answer = d.target.getAttribute("r");
+                    answer = d.target.getAttribute("values");
                     console.log('Circle that was picked is: '+answer);
                     //console.log('Circle that was picked is: '+answer);
 
