Added smallest value.

--- a/patterns/templates/patterns/about.html
+++ b/patterns/templates/patterns/about.html
@@ -6,8 +6,9 @@
         <p> Representation is: {{ post.representation }}</p>
         <p> Repetition: n-{{ post.repetition }}</p>
         <p> Time to click: {{ post.time }} ms.</p>
-        <p> List of Values: {{ post.values }}</p>
-        <p> largest Value is: {{ post.correctanswer }}</p>
+        <p> List of values: {{ post.values }}</p>
+        <p> largest value is: {{ post.correctanswer }}</p>
+        <p> Smallest value is: {{ post.smallestvalue }}</p>
         <p> Answer is : {{ post.answer }}</p>
     {% endfor %}
 {% endblock content %}
