--- a/patterns/templates/patterns/text9.html
+++ b/patterns/templates/patterns/text9.html
@@ -145,11 +145,16 @@
                     //d3.select('body').append('p').text('Button was clicked: '+clicked);
 
                     var temp;
+                    var tempTwo;
                     var largest = 0;
+                    var smallest = 100;
                     for(var i=0; i<arr.length; i++){
                         temp = arr[i];
+                        tempTwo = arr[i];
                         if(temp > largest)
                             largest = temp;
+                        if(tempTwo < smallest)
+                            smallest = tempTwo;
                     }
 
                     fetch("{% url 'patterns-text9' %}", {
@@ -159,6 +164,7 @@
                             'repetition':clicked,
                             'values':arr,
                             'correctanswer':largest,
+                            'smallestvalue':smallest,
                             'answer':answer
                         }),
                         headers: {'X-CSRFToken':document.cookie.split('=')[1]}
